# poetry-demo

./: README.md  poetry_commands  pyproject.toml
poetry_demo/: app.py
