[project]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Naoki Ohno",email = "naoki@naokiohno.xyz"}
]
readme = "README.md"
requires-python = "3.12.7"
dependencies = [
	"pandas==2.2.3"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
